refactor: update response codes, request params
