# api/swagger.json
@@ -43,8 +43,8 @@
                             }
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -80,11 +80,17 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": ""
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -93,7 +99,7 @@
             }
         },
         "/api/v1/users/pass": {
-            "post": {
+            "put": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -122,8 +128,20 @@
                     "200": {
                         "description": ""
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -162,8 +180,20 @@
                             "$ref": "#/definitions/dto.User"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -206,8 +236,20 @@
                     "200": {
                         "description": ""
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -241,8 +283,8 @@
                     "200": {
                         "description": ""
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -251,7 +293,7 @@
             }
         },
         "/api/v1/users/{uid}/pass": {
-            "post": {
+            "put": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -287,8 +329,20 @@
                     "200": {
                         "description": ""
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -326,7 +380,7 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": ""
                     },
                     "400": {
@@ -334,43 +388,9 @@
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
-                    }
-                }
-            }
-        },
-        "/api/v1/wordgroups/default/{lid}": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Get word group by language",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "WordGroups"
-                ],
-                "summary": "Get default word group by language",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "lang id",
-                        "name": "lid",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.WordGroup"
-                        }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -378,26 +398,26 @@
                 }
             }
         },
-        "/api/v1/wordgroups/langs/{lid}": {
+        "/api/v1/wordgroups/langs/{iso}": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Get all word groups",
+                "description": "Get all word groups for language",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "WordGroups"
                 ],
-                "summary": "List word groups",
+                "summary": "List word groups for language",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "language id",
-                        "name": "lid",
+                        "description": "language iso code",
+                        "name": "iso",
                         "in": "path",
                         "required": true
                     }
@@ -414,6 +434,61 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/wordgroups/langs/{iso}/default": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get word group for language",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "WordGroups"
+                ],
+                "summary": "Get default word group for language",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "lang iso code",
+                        "name": "iso",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.WordGroup"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "404": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -457,6 +532,18 @@
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
                     }
                 }
             }
@@ -491,11 +578,23 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": ""
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -537,8 +636,20 @@
                             }
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -580,11 +691,23 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "202": {
                         "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -624,11 +747,23 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "202": {
                         "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -666,11 +801,23 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "202": {
                         "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
                     },
                     "404": {
                         "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -711,6 +858,35 @@
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/google": {
+            "get": {
+                "description": "Sign up/in with Google",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Token"
+                ],
+                "summary": "Google Login",
+                "responses": {
+                    "307": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
                     }
                 }
             }
@@ -743,6 +919,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.errResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/v1.errResponse"
                         }
@@ -805,9 +987,6 @@
                 },
                 "phone": {
                     "type": "string"
-                },
-                "uid": {
-                    "type": "string"
                 }
             }
         },
@@ -861,7 +1040,7 @@
                 "id": {
                     "type": "string"
                 },
-                "lang_id": {
+                "lang_iso": {
                     "type": "string"
                 },
                 "name": {
@@ -872,7 +1051,7 @@
         "dto.WordGroupCreate": {
             "type": "object",
             "properties": {
-                "lang_id": {
+                "lang_iso": {
                     "type": "string"
                 },
                 "name": {
