# internal/api/v1/token.go
@@ -1,6 +1,7 @@
 package v1
 
 import (
+	"errors"
 	"github.com/kataras/iris/v12"
 	"github.com/ujum/dictap/internal/api"
 	"github.com/ujum/dictap/internal/dto"
@@ -15,10 +16,15 @@ import (
 // @Produce  json
 // @Success 200 {object} dto.TokenDTO
 // @Failure 400 {object} errResponse
+// @Failure 401 {object} errResponse
 // @Router /auth [post]
 func (handler *Handler) auth(ctx iris.Context) {
 	credentials := &dto.UserCredentials{}
 	err := ctx.ReadJSON(credentials)
+	if err != nil {
+		badRequestResponse(ctx, err)
+		return
+	}
 	tokens, err := handler.services.TokenService.Generate(api.RequestContext(ctx), credentials)
 	if err != nil {
 		ctx.StopWithJSON(http.StatusUnauthorized, &errResponse{Message: err.Error()})
@@ -35,16 +41,17 @@ func (handler *Handler) auth(ctx iris.Context) {
 // @Produce  json
 // @Success 200 {object} dto.TokenDTO
 // @Failure 400 {object} errResponse
+// @Failure 500 {object} errResponse
 // @Router /refresh [post]
 func (handler *Handler) refresh(ctx iris.Context) {
 	refreshToken := []byte(ctx.URLParam("refresh_token"))
 	if len(refreshToken) == 0 {
-		ctx.StopWithStatus(http.StatusBadRequest)
+		badRequestResponse(ctx, errors.New("refresh token not provided"))
 		return
 	}
 	tokens, err := handler.services.TokenService.Refresh(api.RequestContext(ctx), refreshToken)
 	if err != nil {
-		badRequestResponse(ctx, err)
+		serverErrorResponse(ctx, err)
 		return
 	}
 	ctx.StopWithJSON(http.StatusOK, tokens)
