# internal/api/v1/word.go
@@ -1,6 +1,7 @@
 package v1
 
 import (
+	"errors"
 	"github.com/jinzhu/copier"
 	"github.com/kataras/iris/v12"
 	"github.com/ujum/dictap/internal/api"
@@ -15,11 +16,17 @@ import (
 // @Param gid path string true "group id"
 // @Produce  json
 // @Success 200 {array} dto.Word
+// @Failure 400 {object} errResponse
 // @Failure 404 {object} errResponse
+// @Failure 500 {object} errResponse
 // @Security ApiKeyAuth
 // @Router /api/v1/words/groups/{gid} [get]
 func (handler *Handler) wordsByGroup(ctx iris.Context) {
 	groupID := ctx.Params().Get("gid")
+	if groupID == "" {
+		badRequestResponse(ctx, errors.New("param gid not provided"))
+		return
+	}
 	userUID, err := api.GetCurrentUserUID(ctx)
 	if err != nil {
 		badRequestResponse(ctx, err)
@@ -30,7 +37,7 @@ func (handler *Handler) wordsByGroup(ctx iris.Context) {
 	// check if group belongs to current user
 	wg, err := handler.services.WordGroupService.GetByIDAndUser(requestContext, groupID, userUID)
 	if err != nil && wg == nil {
-		badRequestResponse(ctx, err)
+		notFoundResponse(ctx, wordGroupNotFoundMsg)
 		return
 	}
 
@@ -56,14 +63,16 @@ func (handler *Handler) wordsByGroup(ctx iris.Context) {
 // @Accept  json
 // @Produce  json
 // @Param word body dto.WordCreate true "Word"
-// @Success 200
+// @Success 201
 // @Failure 400 {object} errResponse
+// @Failure 404 {object} errResponse
+// @Failure 500 {object} errResponse
 // @Security ApiKeyAuth
 // @Router /api/v1/words [post]
 func (handler *Handler) createWord(ctx iris.Context) {
 	word := &dto.WordCreate{}
 	if err := ctx.ReadJSON(word); err != nil {
-		serverErrorResponse(ctx, err)
+		badRequestResponse(ctx, err)
 		return
 	}
 	userUID, err := api.GetCurrentUserUID(ctx)
@@ -74,13 +83,13 @@ func (handler *Handler) createWord(ctx iris.Context) {
 
 	wordGroup, err := handler.services.WordGroupService.GetByIDAndUser(api.RequestContext(ctx), word.GroupID, userUID)
 	if err != nil || wordGroup == nil {
-		badRequestResponse(ctx, err)
+		notFoundResponse(ctx, wordGroupNotFoundMsg)
 		return
 	}
 
 	wordID, err := handler.services.WordService.Create(api.RequestContext(ctx), word)
 	if err := err; err != nil {
-		badRequestResponse(ctx, err)
+		serverErrorResponse(ctx, err)
 		return
 	}
 	createdResponse(ctx, wordID)
@@ -93,13 +102,24 @@ func (handler *Handler) createWord(ctx iris.Context) {
 // @Param name path string true "word name"
 // @Param gid path string true "group id"
 // @Produce  json
-// @Success 200
+// @Success 202
+// @Failure 400 {object} errResponse
 // @Failure 404 {object} errResponse
+// @Failure 500 {object} errResponse
 // @Security ApiKeyAuth
 // @Router /api/v1/words/{name}/groups/{gid} [post]
 func (handler *Handler) addWordToGroup(ctx iris.Context) {
 	groupID := ctx.Params().Get("gid")
 	wordName := ctx.Params().Get("name")
+
+	if groupID == "" {
+		badRequestResponse(ctx, errors.New("param gid not provided"))
+		return
+	}
+	if wordName == "" {
+		badRequestResponse(ctx, errors.New("param name not provided"))
+		return
+	}
 
 	userUID, err := api.GetCurrentUserUID(ctx)
 	if err != nil {
@@ -109,7 +129,7 @@ func (handler *Handler) addWordToGroup(ctx iris.Context) {
 	requestContext := api.RequestContext(ctx)
 	_, err = handler.services.WordGroupService.GetByIDAndUser(requestContext, groupID, userUID)
 	if err != nil {
-		badRequestResponse(ctx, err)
+		notFoundResponse(ctx, wordGroupNotFoundMsg)
 		return
 	}
 	err = handler.services.WordService.AddToGroup(requestContext, wordName, groupID)
@@ -127,13 +147,24 @@ func (handler *Handler) addWordToGroup(ctx iris.Context) {
 // @Param name path string true "word name"
 // @Param gid path string true "group id"
 // @Produce  json
-// @Success 200
+// @Success 202
+// @Failure 400 {object} errResponse
 // @Failure 404 {object} errResponse
+// @Failure 500 {object} errResponse
 // @Security ApiKeyAuth
 // @Router /api/v1/words/{name}/groups/{gid} [delete]
 func (handler *Handler) removeWordFromGroup(ctx iris.Context) {
 	groupID := ctx.Params().Get("gid")
 	wordName := ctx.Params().Get("name")
+
+	if groupID == "" {
+		badRequestResponse(ctx, errors.New("param gid not provided"))
+		return
+	}
+	if wordName == "" {
+		badRequestResponse(ctx, errors.New("param name not provided"))
+		return
+	}
 
 	userUID, err := api.GetCurrentUserUID(ctx)
 	if err != nil {
@@ -143,7 +174,7 @@ func (handler *Handler) removeWordFromGroup(ctx iris.Context) {
 	requestContext := api.RequestContext(ctx)
 	_, err = handler.services.WordGroupService.GetByIDAndUser(requestContext, groupID, userUID)
 	if err != nil {
-		badRequestResponse(ctx, err)
+		notFoundResponse(ctx, wordGroupNotFoundMsg)
 		return
 	}
 	err = handler.services.WordService.RemoveFromGroup(requestContext, wordName, groupID)
@@ -161,16 +192,23 @@ func (handler *Handler) removeWordFromGroup(ctx iris.Context) {
 // @Param name path string true "word name"
 // @Param move body dto.WordGroupMovement true "Word Group Movement"
 // @Produce  json
-// @Success 200
+// @Success 202
+// @Failure 400 {object} errResponse
 // @Failure 404 {object} errResponse
+// @Failure 500 {object} errResponse
 // @Security ApiKeyAuth
 // @Router /api/v1/words/{name}/groups [post]
 func (handler *Handler) moveWordToGroup(ctx iris.Context) {
 	wordName := ctx.Params().Get("name")
 
+	if wordName == "" {
+		badRequestResponse(ctx, errors.New("param name not provided"))
+		return
+	}
+
 	wgMove := &dto.WordGroupMovement{}
 	if err := ctx.ReadJSON(wgMove); err != nil {
-		serverErrorResponse(ctx, err)
+		badRequestResponse(ctx, err)
 		return
 	}
 
@@ -182,13 +220,13 @@ func (handler *Handler) moveWordToGroup(ctx iris.Context) {
 	requestContext := api.RequestContext(ctx)
 	_, err = handler.services.WordGroupService.GetByIDAndUser(requestContext, wgMove.FromGroupID, userUID)
 	if err != nil {
-		badRequestResponse(ctx, err)
+		notFoundResponse(ctx, "word group from not found")
 		return
 	}
 
 	_, err = handler.services.WordGroupService.GetByIDAndUser(requestContext, wgMove.ToGroupID, userUID)
 	if err != nil {
-		badRequestResponse(ctx, err)
+		notFoundResponse(ctx, "word group to not found")
 		return
 	}
 
